--- a/src/assets/styles/components/system/setting.scss
+++ b/src/assets/styles/components/system/setting.scss
@@ -1,5 +1,4 @@
-@import '../../variables.scss';
-@import '../../mixins.scss';
+@import '../../helpers.scss';
 
 .mb-auto {
   margin-bottom: auto;
@@ -7,6 +6,7 @@
 
 .title {
   padding: 1rem 1.5rem;
+  background-color: #fff;
 
   > p {
     color: #333;
@@ -18,6 +18,7 @@
 .slide {
   padding: 0 1.5rem 1rem 1.5rem;
   border-bottom: 0.125rem #e2e2e2 solid;
+  background-color: #fff;
 
   > p {
     color: #777;
