--- a/src/assets/styles/views/login.scss
+++ b/src/assets/styles/views/login.scss
@@ -1,6 +1,4 @@
-@import '../variables.scss';
-@import '../mixins.scss';
-@import '../functions.scss';
+@import '../helpers.scss';
 
 .header {
   height: 17.5vh;
