--- a/src/assets/styles/views/register.scss
+++ b/src/assets/styles/views/register.scss
@@ -1,6 +1,4 @@
-@import '../variables.scss';
-@import '../mixins.scss';
-@import '../functions.scss';
+@import '../helpers.scss';
 
 .reg-bg {
   height: 100vh;
