--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -1,7 +1,7 @@
 @import '../helpers.scss';
 
 .header {
-  height: 5vh;
+  height: 4rem;
   background-color: $primary;
   box-shadow: 0 0.1875rem 0.1875rem rgba(0, 0, 0, 0.5);
 
