--- a/src/assets/styles/components/system/setting.scss
+++ b/src/assets/styles/components/system/setting.scss
@@ -76,3 +76,16 @@
     }
   }
 }
+
+.multiple-img {
+  width: 9.375rem;
+  height: 9.375rem;
+  margin-right: 1rem;
+  border-radius: 0.5rem;
+}
+
+.gmap-area {
+  width: 40rem;
+  height: 20rem;
+  margin-left: 10rem;
+}
