--- a/src/assets/styles/views/login.scss
+++ b/src/assets/styles/views/login.scss
@@ -1,7 +1,7 @@
 @import '../helpers.scss';
 
 .header {
-  height: 17.5vh;
+  height: 17.5%;
   flex-direction: column;
   background-color: $primary;
 
@@ -14,7 +14,7 @@
 
 .main {
   padding: 2rem;
-  height: 82.5vh;
+  height: 82.5%;
   background-position: center;
   background-size: cover;
 
