--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -79,6 +79,10 @@ $primary-light: #0b7dd1;
   margin-bottom: 1.25rem; // login
 }
 
+.ml-160 {
+  margin-left: 10rem;
+}
+
 .d-none {
   display: none; // setting
 }
