--- a/src/assets/styles/components/system/role/sharing.scss
+++ b/src/assets/styles/components/system/role/sharing.scss
@@ -6,11 +6,12 @@
   i {
     cursor: pointer;
     font-weight: bold;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin-right: 1rem;
   }
 
   p {
+    font-size: 1.125rem;
     font-weight: bold;
   }
 }
@@ -21,7 +22,7 @@
   background-color: #f5f5f5;
 
   .form-inside {
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 3rem 1.5rem;
     background-color: #fff;
     border: 0.125rem #e2e2e2 solid;
 
@@ -38,10 +39,9 @@
     .form-header {
       padding: 1rem;
       margin-top: 1rem;
-      font-weight: bold;
       font-size: 0.875rem;
       background-color: #f5f5f5;
-      border-bottom: 0.125rem solid #e2e2e2;
+      border-bottom: 0.0625rem solid #e2e2e2;
 
       .el-row {
         width: 30%;
@@ -51,7 +51,7 @@
     .category-title {
       padding: 1rem;
       font-size: 0.875rem;
-      border-bottom: 0.125rem solid #e2e2e2;
+      border-bottom: 0.0625rem solid #e2e2e2;
 
       > i {
         margin: 0 1rem;
@@ -63,13 +63,28 @@
     .category-content {
       padding: 1rem;
       background-color: #f5f5f5;
+      border-bottom: 0.0625rem solid #e2e2e2;
 
-      > label {
-        margin-left: 3rem;
+      .fuck {
+        margin-left: 2.5rem;
+
+        > label {
+          cursor: pointer;
+          font-size: 0.875rem;
+        }
+
+        > input {
+          margin-right: 1rem;
+        }
       }
 
       .el-row {
         width: 30%;
+
+        > input {
+          cursor: pointer;
+          zoom: 150%;
+        }
 
         > label {
           margin-right: unset;
