--- a/src/assets/styles/components/system/setting.scss
+++ b/src/assets/styles/components/system/setting.scss
@@ -60,8 +60,8 @@
       }
 
       .single-img-area {
-        width: 31.25rem;
-        height: 15.625rem;
+        width: 30rem;
+        height: 16.875rem;
         margin-left: 10rem;
 
         > img {
@@ -122,8 +122,12 @@
   .remove {
     @include ps-abs(0, 0);
     @include size(100%, 100%);
-    background-color: rgba(0, 0, 0, 0.75);
+    // background-color: rgba(0, 0, 0, 0.75);
     border-radius: 0.5rem;
+    transition: 1s;
+    &:hover {
+      // background-color: rgba(0, 0, 0, 0.75);
+    }
 
     > i {
       @include ps-abs(50%, 50%);
