--- a/src/assets/styles/components/system/role/sharing.scss
+++ b/src/assets/styles/components/system/role/sharing.scss
@@ -16,7 +16,8 @@
   }
 }
 
-// Role Maintain & Role Create
+/* Role Maintain & Role Create */
+
 .form {
   padding: 1.5rem;
   background-color: #f5f5f5;
@@ -26,70 +27,66 @@
     background-color: #fff;
     border: 0.125rem #e2e2e2 solid;
 
-    // only for role maintain
-    > p {
-      line-height: 2rem;
-    }
+    /* only for role create */
 
-    // only for role create
-    .el-input {
-      width: 10rem;
-    }
+    // .el-input {
+    //   width: 10rem;
+    // }
 
-    .form-header {
-      padding: 1rem;
-      margin-top: 1rem;
-      font-size: 0.875rem;
-      background-color: #f5f5f5;
-      border-bottom: 0.0625rem solid #e2e2e2;
+    // .form-header {
+    //   padding: 1rem;
+    //   margin-top: 1rem;
+    //   font-size: 0.875rem;
+    //   background-color: #f5f5f5;
+    //   border-bottom: 0.0625rem solid #e2e2e2;
 
-      .el-row {
-        width: 30%;
-      }
-    }
+    //   .el-row {
+    //     width: 30%;
+    //   }
+    // }
 
-    .category-title {
-      padding: 1rem;
-      font-size: 0.875rem;
-      border-bottom: 0.0625rem solid #e2e2e2;
+    // .category-title {
+    //   padding: 1rem;
+    //   font-size: 0.875rem;
+    //   border-bottom: 0.0625rem solid #e2e2e2;
 
-      > i {
-        margin: 0 1rem;
-        cursor: pointer;
-        font-weight: bold;
-      }
-    }
+    //   > i {
+    //     margin: 0 1rem;
+    //     cursor: pointer;
+    //     font-weight: bold;
+    //   }
+    // }
 
-    .category-content {
-      padding: 1rem;
-      background-color: #f5f5f5;
-      border-bottom: 0.0625rem solid #e2e2e2;
+    // .category-content {
+    //   padding: 1rem;
+    //   background-color: #f5f5f5;
+    //   border-bottom: 0.0625rem solid #e2e2e2;
 
-      .fuck {
-        margin-left: 2.5rem;
+    //   .fuck {
+    //     margin-left: 2.5rem;
 
-        > label {
-          cursor: pointer;
-          font-size: 0.875rem;
-        }
+    //     > label {
+    //       cursor: pointer;
+    //       font-size: 0.875rem;
+    //     }
 
-        > input {
-          margin-right: 1rem;
-        }
-      }
+    //     > input {
+    //       margin-right: 1rem;
+    //     }
+    //   }
 
-      .el-row {
-        width: 30%;
+    //   .el-row {
+    //     width: 30%;
 
-        > input {
-          cursor: pointer;
-          zoom: 150%;
-        }
+    //     > input {
+    //       cursor: pointer;
+    //       zoom: 150%;
+    //     }
 
-        > label {
-          margin-right: unset;
-        }
-      }
-    }
+    //     > label {
+    //       margin-right: unset;
+    //     }
+    //   }
+    // }
   }
 }
