--- a/src/assets/styles/views/login.scss
+++ b/src/assets/styles/views/login.scss
@@ -17,6 +17,22 @@
   height: 82.5%;
   background-position: center;
   background-size: cover;
+  flex-direction: column;
+
+  .form {
+    max-width: 250px;
+    max-height: 350px;
+  }
+
+  .img-area {
+    display: flex;
+    margin-top: 1.5rem;
+
+    > img {
+      margin: 1rem;
+      border-radius: 0.5rem;
+    }
+  }
 
   a {
     font-size: 0.875rem;
