Category & Role & ICD10 大致完成

--- a/src/assets/styles/components/system/setting.scss
+++ b/src/assets/styles/components/system/setting.scss
@@ -1,15 +1,11 @@
 @import '../../helpers.scss';
 
-.mb-auto {
-  margin-bottom: auto;
-}
-
-.title {
+.header {
   padding: 1rem 1.5rem;
   background-color: #fff;
 
   > p {
-    color: #333;
+    color: $text-dark;
     font-weight: bold;
     font-size: 1.25rem;
   }
@@ -17,11 +13,11 @@
 
 .slide {
   padding: 0 1.5rem 1rem 1.5rem;
-  border-bottom: 0.125rem #e2e2e2 solid;
+  border-bottom: 0.125rem $main-border solid;
   background-color: #fff;
 
   > a {
-    color: #777;
+    color: $text-light;
     font-size: 0.875rem;
     margin-right: 1.5rem;
     text-decoration: none;
@@ -33,7 +29,7 @@
 }
 
 .main {
-  background-color: #f5f5f5;
+  background-color: $main-bg;
   padding: 0 1.5rem 1.5rem 1.5rem;
   position: relative;
 
@@ -43,7 +39,7 @@
 
   .main-item {
     background-color: #fff;
-    border: 0.125rem #e2e2e2 solid;
+    border: 0.125rem $main-border solid;
 
     .item-row {
       margin: 2rem;
