--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -7,6 +7,8 @@ $primary-dark: #001938;
 $primary-light: #0b7dd1;
 $main-bg: #f5f5f5;
 $main-border: #e2e2e2;
+$text-dark: #333;
+$text-light: #777;
 
 /******************
  ***   Mixins   ***
@@ -45,16 +47,16 @@ $main-border: #e2e2e2;
   }
 }
 
-/********************* 
- ***   Functions   ***
- *********************/
+/********************** 
+ ***   Functional   ***
+ **********************/
 
 .w-90 {
-  width: 5.625rem; // login, register
+  width: 5.625rem; // reg, login
 }
 
 .w-250 {
-  width: 15.625rem; // login, register
+  width: 15.625rem; // reg, login
 }
 
 .h-100 {
@@ -62,27 +64,39 @@ $main-border: #e2e2e2;
 }
 
 .mt-16 {
-  margin-top: 1rem; // register
+  margin-top: 1rem; // reg
 }
 
 .mt-40 {
-  margin-top: 2.5rem; // register
+  margin-top: 2.5rem; // reg
+}
+
+.mr-auto {
+  margin-right: auto; // icd maintain
 }
 
 .mb-0 {
-  margin-bottom: 0; // login, register
+  margin-bottom: 0; // reg, login
 }
 
 .mb-8 {
-  margin-bottom: 0.5rem; // register
+  margin-bottom: 0.5rem; // reg
 }
 
 .mb-20 {
   margin-bottom: 1.25rem; // login
 }
 
+.mb-auto {
+  margin-bottom: auto; // setting
+}
+
+.ml-16 {
+  margin-left: 1rem; // icd maintain
+}
+
 .ml-160 {
-  margin-left: 10rem;
+  margin-left: 10rem; // setting
 }
 
 .d-none {
@@ -90,31 +104,55 @@ $main-border: #e2e2e2;
 }
 
 .p-rel {
-  position: relative;
+  position: relative; // setting
 }
 
 /*******************
  ***   Sharing   ***
  *******************/
 
-.main-title {
+.sys-header {
   padding: 0.75rem 1.5rem;
   background-color: #fff;
   border-bottom: 0.125rem $main-border solid;
 
-  > p {
+  i {
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-right: 1rem;
+  }
+
+  p {
     font-size: 1.125rem;
     font-weight: bold;
   }
 }
 
-.main-layout {
+.form {
   padding: 1.5rem;
   background-color: $main-bg;
 
-  .layout-inside {
+  .form-inside {
     background-color: #fff;
     border: 0.125rem $main-border solid;
-    padding: 1.25rem 1.5rem 3rem 1.5rem;
+    padding: 1.5rem 1.5rem 3rem 1.5rem;
+
+    .inside-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 1.5rem;
+
+      > p {
+        width: 6.25rem;
+        margin-right: 1rem;
+      }
+
+      .el-input,
+      .el-select,
+      .el-cascader {
+        width: 18.75rem;
+      }
+    }
   }
 }
