--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -119,15 +119,25 @@ $text-light: #777;
  *******************/
 
 .sys-header {
-  padding: 0.75rem 1.5rem;
+  // padding: 0.75rem 1.5rem;
+  height: 3.5rem;
+  padding: 0 1.5rem;
   background-color: #fff;
   border-bottom: 0.125rem $main-border solid;
 
   i {
     cursor: pointer;
-    font-size: 1.5rem;
+    padding: 0.25rem;
+    transition: 0.25s;
     font-weight: bold;
-    margin-right: 1rem;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
+
+    &:hover {
+      padding: 0.25rem;
+      border-radius: 50%;
+      background-color: rgba($color: #666, $alpha: 0.25);
+    }
   }
 
   p {
