--- a/src/assets/styles/components/system/setting.scss
+++ b/src/assets/styles/components/system/setting.scss
@@ -46,10 +46,6 @@
       display: flex;
       align-items: center;
 
-      p {
-        font-size: 0.875rem;
-      }
-
       .row-p {
         width: 10rem;
         min-width: 10rem;
@@ -125,11 +121,11 @@
   .remove {
     @include ps-abs(0, 0);
     @include size(100%, 100%);
-    // background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.75);
     border-radius: 0.5rem;
     transition: 1s;
     &:hover {
-      // background-color: rgba(0, 0, 0, 0.75);
+      background-color: rgba(0, 0, 0, 0.75);
     }
 
     > i {
