--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -114,12 +114,11 @@ $text-light: #777;
   display: inline-block;
 }
 
-/*******************
- ***   Sharing   ***
- *******************/
+/*************************
+ ***   System layout   ***
+ *************************/
 
 .sys-header {
-  // padding: 0.75rem 1.5rem;
   height: 3.5rem;
   padding: 0 1.5rem;
   background-color: #fff;
@@ -130,13 +129,13 @@ $text-light: #777;
     padding: 0.25rem;
     transition: 0.25s;
     font-weight: bold;
-    font-size: 1.375rem;
+    font-size: 1.5rem;
     margin-right: 0.5rem;
 
     &:hover {
       padding: 0.25rem;
       border-radius: 50%;
-      background-color: rgba($color: #666, $alpha: 0.25);
+      background-color: rgba($color: $text-light, $alpha: 0.25);
     }
   }
 
@@ -146,14 +145,20 @@ $text-light: #777;
   }
 }
 
-.form {
+// form
+.sys-main {
   padding: 1.5rem;
   background-color: $main-bg;
 
-  .form-inside {
+  // form-inside
+  .main-inside {
     background-color: #fff;
     border: 0.125rem $main-border solid;
     padding: 1.5rem 1.5rem 3rem 1.5rem;
+
+    .el-input {
+      width: 12.5rem;
+    }
 
     .inside-item {
       display: flex;
@@ -168,7 +173,7 @@ $text-light: #777;
       .el-input,
       .el-select,
       .el-cascader {
-        width: 18.75rem;
+        width: 20rem;
       }
     }
   }
