--- a/src/assets/styles/views/success.scss
+++ b/src/assets/styles/views/success.scss
@@ -19,7 +19,8 @@
       flex-direction: column;
 
       p:nth-of-type(1) {
-        font-size: 1.125rem;
+        font-size: 1.25rem;
+        font-weight: bold;
         color: $primary-light;
       }
 
@@ -49,11 +50,12 @@
       p:nth-of-type(2) {
         color: #333;
         font-weight: bold;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
       }
 
       p:nth-of-type(3) {
         color: #333;
+        font-size: 1rem;
         margin-top: 0.5rem;
       }
     }
